<resources>
    <string name="app_name">一毛秒</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入手机号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="user_login">用户登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="fast_register">快速注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="home">首页</string>
    <string name="shaidan">晒单</string>
    <string name="chat">聊天</string>
    <string name="near">附近人</string>
    <string name="user_center">个人中心</string>
    <string name="no_more">沒有更多数据了....</string>
    <string name="phone_num">手机号</string>
    <string name="save_pwd">记住密码</string>
    <string name="remober_pwd">忘记密码?</string>
    <string name="register_one">1.输入手机号</string>
    <string name="register_three">2.输入密码</string>
    <string name="comit_yanzhen">验证验证码</string>
    <string name="right_phone">请输入正确的手机号~</string>
    <string name="mine_red">我已阅读并同意</string>
    <string name="xieyi">服务协议</string>
    <string name="agree_xieyi">请同意协议~</string>
    <string name="verification">验证码</string>
    <string name="verification_hint">请输入验证码~</string>
    <string name="send_again">重发验证码</string>
    <string name="commit">提交</string>
    <string name="user_info">个人信息</string>
    <string name="retreieve_pwd">忘记密码</string>
    <string name="pwd">密码</string>
    <string name="next">下一步</string>
    <string name="get_verification">获取验证码</string>
    <string name="time_get_ver">秒重新获取</string>
    <string name="empty_chat">暂时没有人联系你哟~</string>
    <string name="new_pwd">新密码</string>
    <string name="right">确定</string>
    <string name="pwd_empty">密码不能为空~</string>
    <string name="account_empty">账号不能为空~</string>
    <string name="ver_empty">验证码不能为空~</string>
    <string name="right_pwd">请输入正确的密码~</string>
    <string name="yu_er">余额:</string>
    <string name="monty">金币</string>
    <string name="recharge">充值</string>
    <string name="jifen">积分</string>
    <string name="jifen_shangcheng">积分商场</string>
    <string name="zhuan_jifen">赚积分</string>
    <string name="miaoshao_jilu">秒杀记录</string>
    <string name="dingdan_guanli">订单管理</string>
    <string name="chongzhi_guanli">充值管理</string>
    <string name="tixian_guanli">提现管理</string>
    <string name="shouhuo_guanli">收货地址管理</string>
    <string name="mine_pingjia">我的评价</string>
    <string name="fankui">反馈</string>
    <string name="lianxi">联系客服</string>
    <string name="dot_login">登录账号</string>
    <string name="dot_register">点击注册</string>
    <string name="exit">注 销</string>
    <string name="is_opne_wx">正在打开微信</string>
    <string name="share_success">分享成功~</string>
    <string name="share_error">分享失败~</string>
    <string name="share_cancle">分享取消~</string>
    <string name="please_install_wx">请安装微信</string>
    <string name="is_open_QQ">正在打开QQ</string>
    <string name="please_install_qq">请安装QQ</string>
    <string name="is_open_wx">正在打开微信</string>
    <string name="is_open_xlwb">正在打开新浪微博</string>
    <string name="please_install_xlwb">请安装新浪微博</string>
    <string name="is_open_qqkongjian">正在打开QQ空间</string>
    <string name="wx">微信好友</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="xlwb">新浪微博</string>
    <string name="qqzom">QQ空間</string>
    <string name="text_cancle">取消</string>
    <string name="loginout">是否确定要注销账户?</string>
    <string name="is_exit">确定要退出一毛秒嘛~</string>
    <string name="photo">相册</string>
    <string name="camera">相机</string>

</resources>
