<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_bottom"
        >

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/linear_bottom"
        android:background="#dcdcdc">

    </View>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:padding="5dp">


        <TextView
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/tab_home_pressed"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/home" />


        <TextView
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/tab_announced_default"
            android:gravity="center"
            android:text="@string/shaidan" />


        <TextView
            android:id="@+id/tab3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/tab_discover_default"
            android:gravity="center"
            android:text="@string/chat" />


        <TextView
            android:id="@+id/tab4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/tab_camera_default"
            android:gravity="center"
            android:text="@string/near" />


        <TextView
            android:id="@+id/tab5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/tab_user_default"
            android:gravity="center"
            android:text="@string/user_center" />


    </LinearLayout>
</RelativeLayout>
