<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/button_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_cancel_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/photo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/button_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_cancel_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/camera"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_cancel_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_cancle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp" />

</LinearLayout>