<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_nomal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_toolbar_height"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_login"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:onClick="back"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/btn_back" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/phone_num"
                    android:textColor="@color/text_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="+86"
                    android:textColor="@color/text_hint"
                    android:textSize="13dp" />

                <com.fansu.yimaomiao.customview.ClearableEditTextWithIcon
                    android:id="@+id/edit_login_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/login_hint_account"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/text_title"
                    android:textColorHint="@color/text_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="13dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/color_line">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pwd"
                    android:textColor="@color/text_title" />

                <EditText
                    android:id="@+id/edit_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:maxLength="20"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/text_title"
                    android:textColorHint="@color/text_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="13dp" />

                <CheckBox
                    android:id="@+id/checkbox_pwd"
                    style="@style/CheckBoxPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_nomal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <CheckBox
                    android:id="@+id/check_save_pwd"
                    style="@style/CheckBoxSavePwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_pwd"
                    android:textColor="@color/text_title"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_rember_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remober_pwd"
                    android:textColor="@color/text_title"
                    android:textSize="12dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_white_red"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>